add commponent in header, work with menu

--- a/app/components/layout/header/Header.module.scss
+++ b/app/components/layout/header/Header.module.scss
@@ -1,7 +1,3 @@
 .header {
-	@apply flex w-full justify-end;
-
-	> nav {
-		@apply flex items-center gap-5;
-	}
+  @apply flex w-full justify-between;
 }
