--- a/app/components/layout/Layout.module.scss
+++ b/app/components/layout/Layout.module.scss
@@ -1,9 +1,9 @@
 .layout {
-  @apply flex flex-wrap;
+
 
   >main {
-    @apply w-4/5 bg-light-gray py-8 px-10;
-
-    >.content {}
+    @apply bg-white py-8 px-10
   }
+
+
 }
