--- a/app/components/layout/header/search/Search.module.scss
+++ b/app/components/layout/header/search/Search.module.scss
@@ -14,4 +14,13 @@
     top: -280%;
     left: -10%;
   }
+
+  // input {
+  //   position: relative;
+  //   z-index: 5;
+  //   width: 90%;
+  //   height: 30px;
+  //   padding: 10px;
+  //   border: 1px solid #000;
+  // }
 }
