--- a/app/components/layout/Layout.module.scss
+++ b/app/components/layout/Layout.module.scss
@@ -2,7 +2,11 @@
 
 
   >main {
-    @apply bg-white py-8 px-10
+    @apply bg-white py-8 px-10;
+  }
+
+  .content {
+    @apply relative max-w-7xl mx-auto;
   }
 
 
