--- a/app/components/ui/catalog/carousel/Carousel.module.scss
+++ b/app/components/ui/catalog/carousel/Carousel.module.scss
@@ -1,11 +1,11 @@
 .carousel {
-  @apply grid grid-cols-4 gap-5 mt-32;
+  @apply grid grid-cols-4 gap-7 mt-32;
 
 }
 
 .item {
   @apply rounded-3xl bg-light-gray p-5 pt-0 mb-8;
-
+  transition: all 0.15s ease-in-out;
 
   .images {
     @apply -mt-[4.5rem];
@@ -23,15 +23,29 @@
   }
 
   &.active {
-    @apply bg-green;
-    box-shadow: 0px 13px 26px rgba(0, 0, 0, 0.5);
+    @apply bg-green bg-contain bg-no-repeat;
+    box-shadow: 0px 8px 26px #033b11b3;
+    transform: scale(1.15);
 
+    background-image: linear-gradient(#02371786, #008D64 50%), url('/images/cardBackground.jpg');
+    background-position: center top;
+    background-size: 100%;
+
+    .variations {
+      @apply grid grid-cols-4 gap-2.5 mt-5;
+
+      >button {
+        @apply transition-colors text-[0.6rem] font-semibold uppercase p-0.5 text-center border border-solid border-white bg-transparent text-white rounded-lg;
+
+        &.active {
+          @apply text-dark-green bg-white;
+        }
+      }
+    }
 
     .heading {
       @apply text-3xl text-white leading-9;
       height: 4.4rem;
     }
-
-
   }
 }
