carouselItem, button, variables, slider(some error). Modification store(cart/slice, carousel/slice) styles Carousel UI

--- a/app/components/layout/header/cart/Cart.module.scss
+++ b/app/components/layout/header/cart/Cart.module.scss
@@ -25,6 +25,10 @@
     .price {
       @apply text-sm text-beige mt-1;
     }
+
+    .variation {
+      @apply text-sm text-dark-green mt-1 opacity-70;
+    }
   }
 }
 
