--- a/app/components/ui/catalog/carousel/Carousel.module.scss
+++ b/app/components/ui/catalog/carousel/Carousel.module.scss
@@ -4,14 +4,14 @@
 }
 
 .item {
-  @apply rounded-3xl bg-light-gray p-5 pt-0 mb-8 cursor-pointer;
-  transition: all 0.05s ease-in-out;
+  @apply rounded-3xl bg-light-gray p-5 pt-0 mb-8;
+  // transition: all 0.05s ease-in-out;
 
 
 
 
   .heading {
-    @apply text-xl text-beige font-bold leading-8;
+    @apply text-xl text-beige font-bold leading-8 block text-left;
     height: 4rem;
     overflow: hidden;
 
@@ -24,8 +24,9 @@
   &.active {
     @apply bg-green bg-contain bg-no-repeat;
     box-shadow: 0px 8px 26px #033b11b3;
-    transform: scale(1.15);
     cursor: auto;
+    will-change: transform;
+    backface-visibility: hidden;
 
     background-image: linear-gradient(#02371786, #008D64 50%), url('/images/cardBackground.jpg');
     background-position: center top;
@@ -48,8 +49,9 @@
     }
 
     .heading {
-      @apply text-3xl text-white leading-9;
+      @apply text-3xl text-white leading-9 text-center;
       height: 4.4rem;
+
     }
   }
 }
