--- a/app/components/ui/catalog/carousel/Carousel.module.scss
+++ b/app/components/ui/catalog/carousel/Carousel.module.scss
@@ -1,36 +1,32 @@
 .carousel {
-  @apply grid grid-cols-4 gap-7 mt-32;
+  @apply grid grid-cols-4 gap-7 mt-28;
 
 }
 
 .item {
   @apply rounded-3xl bg-light-gray p-5 pt-0 mb-8;
-  // transition: all 0.05s ease-in-out;
-
-
-
 
   .heading {
     @apply text-xl text-beige font-bold leading-8 block text-left;
     height: 4rem;
     overflow: hidden;
-
   }
 
   .description {
     @apply mt-5 opacity-90 text-sm;
+    animation: animationOptions 1s;
   }
 
   &.active {
     @apply bg-green bg-contain bg-no-repeat;
-    box-shadow: 0px 8px 26px #033b11b3;
+
     cursor: auto;
     will-change: transform;
     backface-visibility: hidden;
-
     background-image: linear-gradient(#02371786, #008D64 50%), url('/images/cardBackground.jpg');
     background-position: center top;
     background-size: 100%;
+    box-shadow: 0px 2px 5px #033b11b3;
 
     .images {
       @apply -mt-[5rem];
@@ -38,6 +34,7 @@
 
     .variations {
       @apply grid grid-cols-4 gap-2.5 mt-5;
+      animation: animationOptions 1s;
 
       >button {
         @apply transition-colors text-[0.6rem] font-semibold uppercase p-0.5 text-center border border-solid border-white bg-transparent text-white rounded-lg;
@@ -49,9 +46,19 @@
     }
 
     .heading {
-      @apply text-3xl text-white leading-9 text-center;
+      @apply text-3xl text-white leading-9 text-left;
       height: 4.4rem;
 
     }
+  }
+}
+
+@keyframes animationOptions {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
