--- a/app/components/ui/catalog/carousel/carouselItem/carousel-navigation/CarouselNavigation.module.scss
+++ b/app/components/ui/catalog/carousel/carouselItem/carousel-navigation/CarouselNavigation.module.scss
@@ -6,7 +6,7 @@
   }
 
   .arrows {
-    @apply flex items-center absolute w-full justify-between top-[6.5rem] text-white;
+    @apply flex items-center absolute w-full justify-between top-[5.7rem] text-white;
 
     .arrow {
 
@@ -14,13 +14,25 @@
       border: 1px #fff solid;
       transition: all 0.1s ease-in-out;
       background-color: rgba(54, 141, 113, 0.7);
+      animation: animationOptions 1s;
 
       &:hover {
         background-color: rgba(0, 141, 100, 0.7);
         color: white;
         border-color: white;
 
+
       }
     }
+  }
+}
+
+@keyframes animationOptions {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
   }
 }
